# image_gallery_project

./: CMakeLists.txt  README.md
ImageCacheLib/: CMakeLists.txt
ImageCacheLib/include/: imagecache.h
ImageCacheLib/src/: imagecache.cpp
ImageGalleryApp/: CMakeLists.txt
ImageGalleryApp/forms/: maingallerywindow.ui  ui_maingallerywindow.h
ImageGalleryApp/include/: maingallerywindow.h
ImageGalleryApp/src/: main.cpp  maingallerywindow.cpp
ImageLoaderLib/: CMakeLists.txt
ImageLoaderLib/include/: imageloader.h
ImageLoaderLib/src/: imageloader.cpp
UINavigatorLib/: CMakeLists.txt
UINavigatorLib/include/: uinavigator.h
UINavigatorLib/src/: uinavigator.cpp
